Fix crash when transform local selections

BUG:261033